Poolcards: Alignment and padding. Fixed status logic.

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -9,25 +9,6 @@
 }
 
 // ----------------------------------------------
-// Text
-// ----------------------------------------------
-.item-title {
-  margin-top: 0;
-}
-.item-price {
-  line-height: 30px;
-  font-size: 26px;
-  color: $primary;
-  margin-bottom: 10px;
-}
-.item-value {
-  line-height: 30px;
-  font-size: 20px;
-  color: $primary;
-  margin-bottom: 10px;
-}
-
-// ----------------------------------------------
 // Tags
 // ----------------------------------------------
 body {
